# beanbeaver-android

./: .gitignore  CLAUDE.md  Cargo.toml  PRIVACY.md  README.md  build-android.sh  keystore.properties.example  local.properties.example  settings.gradle.kts  shell.nix
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/beanbeaver/app/: BeanBeaverApplication.kt  MainActivity.kt
app/src/main/java/com/beanbeaver/app/debug/: DebugInfoStore.kt
app/src/main/java/com/beanbeaver/app/github/: GitHubApp.kt  GitHubLedger.kt  GitHubSyncViewModel.kt  LedgerEntry.kt  TokenStore.kt
app/src/main/java/com/beanbeaver/app/receipt/: BatchRunner.kt  LedgerFormatPrefs.kt  ModelStore.kt  OcrSessionProvider.kt  ReceiptBatch.kt  ReceiptCaptureStore.kt  ReceiptPipeline.kt  ReceiptResultJson.kt  Timings.kt
app/src/main/java/com/beanbeaver/app/ui/: BatchImportScreen.kt  BeanBeaverApp.kt  Components.kt  DebugInfoScreen.kt  DocumentScan.kt  Format.kt  GitHubSettingsScreen.kt  SettingsScreen.kt  ZoomableImage.kt
app/src/main/java/com/beanbeaver/app/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
bbreceiptkit/: build.gradle.kts  consumer-rules.pro
bbreceiptkit/src/main/kotlin/com/beanbeaver/bbreceiptkit/: ReceiptScanner.kt
models/: README.md
scripts/: android-e2e-private.sh  android-e2e.sh  fetch-models.sh
src/: lib.rs
